--- a/config.env
+++ b/config.env
@@ -1,1 +1,3 @@
 PORT = 3000
+DATABASE_PASSWORD = M42kjMC6js7QTmCN
+DATABASE = mongodb+srv://Rgazeri320:<PASSWORD>@takhfif-auc1b.mongodb.net/takhfifan?retryWrites=true&w=majority
