--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "api-create-with node and graphql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Reza Gazeri",
   "license": "ISC",
   "dependencies": {
+    "app-module-path": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7"
